yaml/frontend-ingress-development.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: frontend-ingress-development
spec:
  rules:
  - host: development-guestbook.mstakx.io
    http:
      paths:
        - backend:
           serviceName: frontend
           servicePort: 80
