yaml/frontend-ingress-production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: frontend-ingress-production
spec:
  rules:
  - host: production-guestbook.mstakx.io
    http:
      paths:
        - backend:
           serviceName: frontend
           servicePort: 80
