yaml/frontend-ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: frontend-ingress-staging
spec:
  rules:
  - host: staging-guestbook.mstakx.io
    http:
      paths:
        - backend:
           serviceName: frontend
           servicePort: 80
